--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pymysql==0.9.3
 flask_mail==0.9.1
 gevent==1.4.0
 flask-restplus==0.12.0
+flask-restful==0.3.7
 flask-jwt-extended==3.18.0
 requests==2.18.4
 flask_login==0.4.0
